# schemas

./: .consolidation-summary.txt  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  BENCHMARKS_PYTHON.md  CAPI.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  C_API_GUIDE.md  C_API_NAMING.md  Cargo.toml  Doxyfile.in  Makefile  NOTICE  PCD_FIELD_TYPES.md  README.md  SECURITY.md  TESTING.md  TODO.md  TODO_A.md  TODO_B.md  TODO_C.md  TODO_D.md  TODO_E.md  TODO_F.md  TODO_G.md  build.rs  edgefirst-schemas.pc.in  pyproject.toml  release.toml  requirements.txt  setup.py  sonar-project.properties
.config/: nextest.toml
.github/: copilot-instructions.md
.github/scripts/: check_license_policy.py  check_version_sync.sh  generate_notice.py  generate_sbom.sh
.github/workflows/: benchmark.yml  c-api.yml  debian.yml  pypi.yml  release.yml  ros.yml  rust.yml  sbom.yml  sonar.yml  test.yml  version-check.yml  wheels.yml
benches/: serialization.rs
benches/cpp/: CMakeLists.txt  README.md  bench_cyclonedds.cpp  bench_edgefirst.cpp  bench_fastcdr.cpp  benchmark.sh  common.hpp
benches/cpp/cmake/: aarch64-gcc.cmake  aarch64-zig.cmake
benches/cpp/idl/builtin_interfaces/: Time.idl
benches/cpp/idl/edgefirst_msgs/: DmaBuffer.idl  Mask.idl  RadarCube.idl
benches/cpp/idl/foxglove_msgs/: CompressedVideo.idl
benches/cpp/idl/geometry_msgs/: Point.idl  Pose.idl  Quaternion.idl  Vector3.idl
benches/cpp/idl/sensor_msgs/: Image.idl  PointCloud2.idl  PointField.idl
benches/cpp/idl/std_msgs/: Header.idl
benches/cpp/scripts/: regen_cyclonedds_types.sh  regen_fastcdr_types.sh
benches/cpp/tests/: parity_cyclonedds.cpp  parity_test.cpp
benches/cpp/types/cyclonedds/builtin_interfaces/: Time.cpp  Time.hpp
benches/cpp/types/cyclonedds/edgefirst_msgs/: DmaBuffer.cpp  DmaBuffer.hpp  Mask.cpp  Mask.hpp  RadarCube.cpp  RadarCube.hpp
benches/cpp/types/cyclonedds/foxglove_msgs/: CompressedVideo.cpp  CompressedVideo.hpp
benches/cpp/types/cyclonedds/geometry_msgs/: Point.cpp  Point.hpp  Pose.cpp  Pose.hpp  Quaternion.cpp  Quaternion.hpp  Vector3.cpp  Vector3.hpp
benches/cpp/types/cyclonedds/sensor_msgs/: Image.cpp  Image.hpp  PointCloud2.cpp  PointCloud2.hpp  PointField.cpp  PointField.hpp
benches/cpp/types/cyclonedds/std_msgs/: Header.cpp  Header.hpp
benches/cpp/types/fastcdr/idl/builtin_interfaces/: TimeCdrAux.hpp  TimeCdrAux.ipp  TimePubSubTypes.cxx  TimePubSubTypes.hpp  TimeTypeObjectSupport.cxx  TimeTypeObjectSupport.hpp
benches/cpp/types/fastcdr/idl/edgefirst_msgs/: DmaBuffer.hpp  DmaBufferCdrAux.hpp  DmaBufferCdrAux.ipp  DmaBufferPubSubTypes.cxx  DmaBufferPubSubTypes.hpp  DmaBufferTypeObjectSupport.cxx  DmaBufferTypeObjectSupport.hpp  Mask.hpp  MaskCdrAux.hpp  MaskCdrAux.ipp  MaskPubSubTypes.cxx  MaskPubSubTypes.hpp  MaskTypeObjectSupport.cxx  MaskTypeObjectSupport.hpp  RadarCube.hpp  RadarCubeCdrAux.hpp  RadarCubeCdrAux.ipp  RadarCubePubSubTypes.cxx  RadarCubePubSubTypes.hpp  RadarCubeTypeObjectSupport.cxx  RadarCubeTypeObjectSupport.hpp
benches/cpp/types/fastcdr/idl/foxglove_msgs/: CompressedVideo.hpp  CompressedVideoCdrAux.hpp  CompressedVideoCdrAux.ipp  CompressedVideoPubSubTypes.cxx  CompressedVideoPubSubTypes.hpp  CompressedVideoTypeObjectSupport.cxx  CompressedVideoTypeObjectSupport.hpp
benches/cpp/types/fastcdr/idl/geometry_msgs/: Point.hpp  PointCdrAux.hpp  PointCdrAux.ipp  PointPubSubTypes.cxx  PointPubSubTypes.hpp  PointTypeObjectSupport.cxx  PointTypeObjectSupport.hpp  Pose.hpp  PoseCdrAux.hpp  PoseCdrAux.ipp  PosePubSubTypes.cxx  PosePubSubTypes.hpp  PoseTypeObjectSupport.cxx  PoseTypeObjectSupport.hpp  Quaternion.hpp  QuaternionCdrAux.hpp  QuaternionCdrAux.ipp  QuaternionPubSubTypes.cxx  QuaternionPubSubTypes.hpp  QuaternionTypeObjectSupport.cxx  QuaternionTypeObjectSupport.hpp  Vector3.hpp  Vector3CdrAux.hpp  Vector3CdrAux.ipp  Vector3PubSubTypes.cxx  Vector3PubSubTypes.hpp  Vector3TypeObjectSupport.cxx  Vector3TypeObjectSupport.hpp
benches/cpp/types/fastcdr/idl/sensor_msgs/: Image.hpp  ImageCdrAux.hpp  ImageCdrAux.ipp  ImagePubSubTypes.cxx  ImagePubSubTypes.hpp  ImageTypeObjectSupport.cxx  ImageTypeObjectSupport.hpp  PointCloud2.hpp  PointCloud2CdrAux.hpp  PointCloud2CdrAux.ipp  PointCloud2PubSubTypes.cxx  PointCloud2PubSubTypes.hpp  PointCloud2TypeObjectSupport.cxx  PointCloud2TypeObjectSupport.hpp  PointField.hpp  PointFieldCdrAux.hpp  PointFieldCdrAux.ipp  PointFieldPubSubTypes.cxx  PointFieldPubSubTypes.hpp  PointFieldTypeObjectSupport.cxx  PointFieldTypeObjectSupport.hpp
benches/cpp/types/fastcdr/idl/std_msgs/: Header.hpp  HeaderCdrAux.hpp  HeaderCdrAux.ipp  HeaderPubSubTypes.cxx  HeaderPubSubTypes.hpp  HeaderTypeObjectSupport.cxx  HeaderTypeObjectSupport.hpp
benches/python/: __init__.py  bench_cyclonedds.py  bench_native.py  bench_pycdr2.py  bench_serialization.py  benchmark.sh  conftest.py  shapes.py
crates/python/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/python/python/edgefirst/schemas/: __init__.pyi  builtin_interfaces.pyi  edgefirst_msgs.pyi  foxglove_msgs.pyi  geometry_msgs.pyi  mavros_msgs.pyi  nav_msgs.pyi  rosgraph_msgs.pyi  sensor_msgs.pyi  std_msgs.pyi
crates/python/src/: lib.rs
edgefirst/schemas/: __init__.py  builtin_interfaces.py  edgefirst_msgs.py  geometry_msgs.py  nav_msgs.py  registry.py  std_msgs.py
edgefirst_msgs/: CMakeLists.txt  package.xml
edgefirst_msgs/debian/: .gitignore  control.in  copyright  rules
edgefirst_msgs/msg/: Box.msg  CameraFrame.msg  CameraPlane.msg  Date.msg  (+10 more)
scripts/: bench_mcap_cdr.py  generate-debian-changelog.sh  generate_cdr_testdata.py  rename_c_api.sh  render_benchmarks.py  render_python_benchmarks.py
src/: builtin_interfaces.rs  cdr.rs  edgefirst_msgs.rs  ffi.rs  foxglove_msgs.rs  geometry_msgs.rs  lib.rs  mavros_msgs.rs  nav_msgs.rs  rosgraph_msgs.rs  schema_registry.rs  sensor_msgs.rs  serde_cdr.rs  service.rs  std_msgs.rs
tests/: builder_ffi_smoke.rs  builder_parity_edgefirst.rs  builder_parity_foxglove.rs  builder_parity_sensor_msgs.rs  builder_parity_std_msgs.rs  builder_reuse.rs  cdr_golden.rs  in_place_setters_smoke.rs  mcap_test.rs
(+123 files in other folders)
