[package]
name = "edgefirst-schemas"
description = "Message schemas for EdgeFirst Perception - ROS2 Common Interfaces, Foxglove, and custom types"
authors = ["Au-Zone Technologies <support@au-zone.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
version = "1.4.1"
homepage = "https://doc.edgefirst.ai"
repository = "https://github.com/EdgeFirstAI/schemas"
documentation = "https://docs.rs/edgefirst-schemas/"
keywords = ["ros2", "perception", "schemas", "edge-ai", "zenoh"]
categories = ["encoding", "data-structures"]

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
cdr = "0.2"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9"

[[bench]]
name = "serialization"
harness = false

[build-dependencies]
cbindgen = "0.27"

# Profile for coverage instrumentation (strip=false, debug=true required for LLVM coverage)
[profile.profiling]
inherits = "release"
strip = false
debug = true
